[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-math = "0.1"
indexmap = "2.1.0"
serde_json = "1.0"
serde = "1.0"
solana-program = "2.2.0"
solana-sdk = "2.2.0"
thiserror = "1.0.50"
rust_decimal = "1.35.0"
presale = { path = "../programs/presale", features = ["no-entrypoint"] }

[dev-dependencies]
rand = "0.7"
hex = "0.4.3"
